modified variable nameand orgeniize with db changes